# rustinvaders

./: Cargo.toml
assets/: gildaga-logo-tr.psd  gildaga-logo.psd  spaceshooter.psd
database/: script.sql
docs/KT2/: Kwaliteitshandboek.docx  Testrapport.docx  ~$strapport.docx
docs/KT3/: AcceptatieTest.docx  EvaluatieVerslag.docx  EvaluatieVerslag.txt  OpleverenAcceptatieTest.docx  OpleverenApplicatie.docx
src/: enemy.rs  main.rs  player.rs  state.rs  ui.rs  window.rs
