[package]
name = "rust-invaders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy-inspector-egui = "0.6.1"
bevy_egui = "0.7.1"
rand = "0.8"

sqlx = { version = "0.4.1", features = [ "mysql", "runtime-async-std-native-tls" ,  ] }
async-std = { version = "1.6", features = [ "attributes" ] }
futures = "0.3"
